--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -18,6 +18,9 @@ import com.android.build.OutputFile
  *   // the entry file for bundle generation
  *   entryFile: "index.android.js",
  *
+ *   // https://facebook.github.io/react-native/docs/performance#enable-the-ram-format
+ *   bundleCommand: "ram-bundle",
+ *
  *   // whether to bundle JS and assets in debug mode
  *   bundleInDebug: false,
  *
@@ -32,6 +35,13 @@ import com.android.build.OutputFile
  *   // bundleInFreeDebug: true,
  *   // bundleInPaidRelease: true,
  *   // bundleInBeta: true,
+ *
+ *   // whether to disable dev mode in custom build variants (by default only disabled in release)
+ *   // for example: to disable dev mode in the staging build type (if configured)
+ *   devDisabledInStaging: true,
+ *   // The configuration property can be in the following formats
+ *   //         'devDisabledIn${productFlavor}${buildType}'
+ *   //         'devDisabledIn${buildType}'
  *
  *   // the root of your project, i.e. where "package.json" lives
  *   root: "../../",
@@ -58,12 +68,18 @@ import com.android.build.OutputFile
  *   inputExcludes: ["android/**", "ios/**"],
  *
  *   // override which node gets called and with what additional arguments
- *   nodeExecutableAndArgs: ["node"]
+ *   nodeExecutableAndArgs: ["node"],
  *
  *   // supply additional arguments to the packager
  *   extraPackagerArgs: []
  * ]
  */
+
+project.ext.react = [
+    entryFile: "index.android.js",
+    root: "../../",
+    enableHermes: false,  // clean and rebuild if changing
+]
 
 apply from: "../../node_modules/react-native/react.gradle"
 
@@ -82,31 +98,54 @@ def enableSeparateBuildPerCPUArchitecture = false
  */
 def enableProguardInReleaseBuilds = true
 
-android {
-    compileSdkVersion 26
+/**
+ * The preferred build flavor of JavaScriptCore.
+ *
+ * For example, to use the international variant, you can use:
+ * `def jscFlavor = 'org.webkit:android-jsc-intl:+'`
+ *
+ * The international variant includes ICU i18n library and necessary data
+ * allowing to use e.g. `Date.toLocaleString` and `String.localeCompare` that
+ * give correct results when using with locales other than en-US.  Note that
+ * this variant is about 6MiB larger per architecture than default.
+ */
+def jscFlavor = 'org.webkit:android-jsc:+'
 
-	// dexOptions and compileOptions are related to MultiDex 
+/**
+ * Whether to enable the Hermes VM.
+ *
+ * This should be set on project.ext.react and mirrored here.  If it is not set
+ * on project.ext.react, JavaScript will not be compiled to Hermes Bytecode
+ * and the benefits of using Hermes will therefore be sharply reduced.
+ */
+def enableHermes = project.ext.react.get("enableHermes", false);
+
+android {
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    // dexOptions and compileOptions are related to MultiDex 
     dexOptions {
         javaMaxHeapSize "4g"
     }
 
-    compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
-    }
-
     defaultConfig {
         applicationId "com.sleep_tracker"
-        minSdkVersion 21
-        targetSdkVersion 25
-		multiDexEnabled true
-        versionCode 26
-        versionName "2.6"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        missingDimensionStrategy "RNN.reactNativeVersion", "reactNative60"
+        multiDexEnabled true
+        versionCode 1
+        versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a"
         }
-		
-		// Don't know why but this one doesn't work when I try to release .apk file. I left it just in case. Workaround below seems to work prefectly.
+
+        // Don't know why but this one doesn't work when I try to release .apk file. I left it just in case. Workaround below seems to work prefectly.
         /*signingConfigs {
             release {
                 if (project.hasProperty('SleepTracker_RELEASE_STORE_FILE')) {
@@ -115,8 +154,7 @@ android {
                    keyAlias SleepTracker_RELEASE_KEY_ALIAS
                     keyPassword SleepTracker_RELEASE_KEY_PASSWORD }
             }
-        }*/
-		
+        }*/       
         signingConfigs {
             release {
                     storeFile file("my-release-key.keystore")
@@ -132,63 +170,92 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a"
+            include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
+
+    signingConfigs {
+        debug {
+            storeFile file('debug.keystore')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
+
     buildTypes {
+        debug {
+            debuggable true
+            signingConfig signingConfigs.debug
+        }
+
         release {
-            signingConfig signingConfigs.release
+            // Caution! In production, you need to generate your own keystore file.
+            // see https://facebook.github.io/react-native/docs/signed-apk-android.
+            signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
-        debug {
-            debuggable true
-        }
     }
+
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
-            // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1]
+            // https://developer.android.com/studio/build/configure-apk-splits.html
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
                         versionCodes.get(abi) * 1048576 + defaultConfig.versionCode
             }
+
+        }
+    }
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support' && requested.name != 'multidex') {
+            details.useVersion "${rootProject.ext.supportLibVersion}"
         }
     }
 }
 
 dependencies {
-    implementation project(':react-native-splash-screen')
-    implementation project(':react-native-bluetooth-serial')
-    implementation project(':react-native-android-alarms') 
-    implementation project(':react-native-wheel-picker-android')
-    implementation project(':lottie-react-native')
-    implementation project(':react-native-i18n')
-    implementation project(':react-native-svg')
-    implementation project(':react-native-background-timer')
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    // Animated Gif support
     implementation 'org.slf4j:slf4j-api:1.7.25'
-    implementation 'com.github.tony19:logback-android:1.1.1-13'
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation 'com.facebook.fresco:fresco:1.3.0'
-    implementation 'com.facebook.fresco:animated-gif:1.3.0'
-    implementation "com.android.support:appcompat-v7:26.1.0"
-    implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation 'org.apache.commons:commons-lang3:3.4'
+    implementation 'com.github.tony19:logback-android:2.0.0'
+    implementation "com.androidplot:androidplot-core:1.5.7"
     implementation files('libs/libmuse_android.jar')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.fresco:fresco:2.0.0'
+    implementation 'com.facebook.fresco:animated-gif:2.1.0'
+    implementation 'com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}'
+    implementation 'org.apache.commons:commons-lang3:3.9'
     implementation group: 'com.github.wendykierp', name: 'JTransforms', version: '3.1'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
-    implementation "com.androidplot:androidplot-core:1.5.6"
-    implementation group: 'com.univocity', name: 'univocity-parsers', version: '2.7.6'
+    implementation group: 'com.univocity', name: 'univocity-parsers', version: '2.8.4'    
+    def appcompat_version = "1.1.0"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.appcompat:appcompat-resources:$appcompat_version"  // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha03'   
+    if (enableHermes) {
+        def hermesPath = "../../node_modules/hermes-engine/android/";
+        debugImplementation files(hermesPath + "hermes-debug.aar")
+        releaseImplementation files(hermesPath + "hermes-release.aar")
+    } else {
+        implementation jscFlavor
+    }
 }
 
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
-    from configurations.implementation
+    from configurations.compile
     into 'libs'
 }
+
+apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
