--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,42 +2,61 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "27.0.3"
-        minSdkVersion = 16
-        compileSdkVersion = 27
-        targetSdkVersion = 26
-        supportLibVersion = "27.1.1"
+        buildToolsVersion = "28.0.3"
+        minSdkVersion = 19
+        compileSdkVersion = 28
+        targetSdkVersion = 28
+        supportLibVersion = "28.0.0"
     }
+
     repositories {
         google()
         jcenter()
-        // For alpha gradle plugin 3.0
-        maven {
-            url 'https://maven.google.com'
-        }
+        mavenLocal()
+        mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath('com.android.tools.build:gradle:3.5.3')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+
+    subprojects { subproject ->
+        afterEvaluate {
+            if ((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
+                android {
+                    variantFilter { variant ->
+                        def names = variant.flavors*.name
+                        if (names.contains("reactNative51")
+                            || names.contains("reactNative55")
+                            || names.contains("reactNative56")
+                            || names.contains("reactNative57")
+                            || names.contains("reactNative57_5")) {
+                                setIgnore(true)
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
 allprojects {
     repositories {
         mavenLocal()
-        google()
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
         }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
+
+        google()
+        jcenter()
+        maven { url 'https://jitpack.io' }
     }
-}
-
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
-    distributionUrl = distributionUrl.replace("bin", "all")
 }
