--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,19 +10,12 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx10248m -XX:MaxPermSize=256m
-
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-
-android.enableAapt2=true
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-android.useDeprecatedNdk=true
-
-SleepTracker_RELEASE_STORE_FILE=my-release-key.keystore
-SleepTracker_RELEASE_KEY_ALIAS=my-key-alias
-SleepTracker_RELEASE_STORE_PASSWORD=sleeptracker
-SleepTracker_RELEASE_KEY_PASSWORD=sleeptracker
+android.useAndroidX=true
+android.enableJetifier=true
