--- a/package.json
+++ b/package.json
@@ -3,57 +3,71 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint .",
+    "postinstall": "npx jetify"
   },
   "dependencies": {
-    "babel-eslint": "^10.0.1",
+    "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/slider": "^2.0.8",
+    "@react-native-community/viewpager": "^3.3.0",
+    "babel-eslint": "^10.0.3",
     "covgen": "^3.1.0",
-    "eslint-plugin-react-native": "^3.5.0",
-    "global": "^4.3.2",
-    "lodash": "^4.17.13",
+    "eslint-plugin-react-native": "^3.8.1",
+    "global": "^4.4.0",
+    "lodash": "^4.17.15",
     "lottie": "^0.0.1",
-    "lottie-react-native": "2.5.11",
-    "moment": "^2.22.2",
-    "react": "16.6.0-alpha.8af6728",
-    "react-addons-pure-render-mixin": "^15.5.2",
-    "react-dom": "^15.4.1",
-    "react-native": "0.57.8",
+    "lottie-react-native": "3.3.2",
+    "moment": "^2.24.0",
+    "react": "16.9.0",
+    "react-addons-pure-render-mixin": "^15.6.2",
+    "react-dom": "^16.12.0",
+    "react-native": "0.61.5",
     "react-native-android-alarms": "https://github.com/vasyl91/react-native-android-alarms.git",
     "react-native-background-timer": "^2.1.1",
-    "react-native-bluetooth-serial": "^1.0.0-rc1",
-    "react-native-drawer": "^2.5.1",
-    "react-native-i18n": "^2.0.15",
-    "react-native-popup-dialog": "^0.15.0",
+    "react-native-bluetooth-serial": "https://github.com/vasyl91/react-native-bluetooth-serial.git", 
+    "react-native-drawer": "https://github.com/vasyl91/react-native-drawer.git", 
+    "react-native-i18n": "https://github.com/vasyl91/react-native-i18n.git",
+    "react-native-keep-awake": "^4.0.0",
+    "react-native-modal": "^11.5.3",
+    "react-native-modals": "https://github.com/vasyl91/react-native-modals.git",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-responsive": "^1.0.2",
-    "react-native-splash-screen": "^3.1.1",
-    "react-native-svg": "^8.0.10",
-    "react-native-wheel-picker-android": "^1.1.4",
-    "react-redux": "^6.0.0",
-    "react-router-native": "^4.3.0",
-    "redux": "^4.0.1",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^9.13.6",
+    "react-native-swiper": "1.5.14",
+    "react-native-wheel-picker-android": "2.0.5",
+    "react-redux": "^7.1.3",
+    "react-router-native": "^5.1.2",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "victory-native": "^31.0.0"
-  },
-  "jest": {
-    "preset": "jest-react-native"
+    "victory-native": "^33.0.1"
   },
   "devDependencies": {
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "babel-jest": "23.6.0",
+    "@babel/core": "^7.6.2",
+    "@babel/plugin-external-helpers": "^7.7.4",
+    "@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
     "babel-preset-react-native": "4.0.1",
-    "eslint": "^5.11.1",
-    "eslint-plugin-react": "^7.12.2",
-    "jest": "23.6.0",
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.17.0",
+    "jest": "^24.9.0",
     "jest-react-native": "18.0.0",
-    "metro-react-native-babel-preset": "^0.51.1",
-    "react-devtools-core": "3.4.3",
-    "react-test-renderer": "16.6.0-alpha.8af6728",
+    "jetifier": "^1.6.5",
+    "metro-react-native-babel-preset": "^0.57.0",
+    "react-devtools-core": "4.3.0",
+    "react-test-renderer": "16.9.0",
     "schedule": "0.5.0",
     "whatwg-fetch": "3.0.0"
   },
+  "jest": {
+    "preset": "react-native"
+  },
   "resolutions": {
-    "react-devtools-core": "3.4.3"
+    "react-devtools-core": "3.6.3"
   },
   "description": "Muse Sleep Tracker + Arduino Light Therapy",
   "main": "index.android.js",
